samples/_failures_safe/1761403478_541aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0eb61df7.c: In function ‘main’:
./samples/SAFE/__tmp_0eb61df7.c:147:16: error: missing terminating " character
  147 |         printf("%-20s %5d\n
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_0eb61df7.c:147:9: error: expected expression at end of input
  147 |         printf("%-20s %5d\n
      |         ^~~~~~
./samples/SAFE/__tmp_0eb61df7.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0eb61df7.c:147:9: error: expected declaration or statement at end of input
